<?xml version="1.0" encoding="utf-8"?>
<!-- See for parameters https://developer.android.com/guide/topics/ui/layout/relative -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="10dp"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <!-- See for difference between Baseline and Bottom
    https://stackoverflow.com/questions/21144227/whats-the-difference-between-alignbaseline-and-alignbottom-in-android
    -->
    <EditText
        android:id="@+id/etName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvName"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/tvName"
        android:inputType="text"
        android:hint="@string/hint_name" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvName"
        android:layout_marginTop="32dp"
        android:layout_alignStart="@+id/tvName"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvEmail"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/etName"
        android:layout_toEndOf="@+id/tvEmail"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email" />

    <TextView
        android:id="@+id/tvTips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvEmail"
        android:layout_marginTop="32dp"
        android:layout_alignStart="@+id/tvEmail"
        android:text="@string/tips"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spNumberTips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvTips"
        android:layout_toEndOf="@+id/tvTips"
        android:entries="@array/number_tips" />

    <Space
        android:id="@+id/space"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/space"
        android:text="@string/send" />

    <Button
        android:id="@+id/btCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/space"
        android:text="@string/cancel" />

</RelativeLayout>